tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_NamespaceName_Empty.bsl

EVIL_PROVIDER_NamespaceName_Empty.fsx(1,1,1,52): parse error FS3007: Empty namespace found from the type provider 'EvilProviderWhereNamespaceNameReturnsEmpty'. Use 'null' for the global namespace.

EVIL_PROVIDER_NamespaceName_Empty.fsx(1,1,1,52): parse error FS3020: One or more errors seen during provided type setup
