tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_NamespaceName_Empty.fsx
#r "provider_EVIL_PROVIDER_NamespaceName_Empty.dll"

open FSharp.EvilProviderWhereNamespaceNameReturnsEmpty

